--- a/Prerequisite_OOP/.project
+++ b/Prerequisite_OOP/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>javaallproject</name>
+	<name>Prerequisite_OOP</name>
 	<comment></comment>
 	<projects>
 	</projects>
